# dictionary

./: CMakeLists.txt  README.md  data.c  dict.c
b/: dict.glade
cmake-btree/: bigt  bigtdel  bt  btr  kcp
